tests/ui/coherence/coherence-overlap-negate-not-use-feature-gate.stderr
error[E0119]: conflicting implementations of trait `Foo` for type `&_`
  --> $DIR/coherence-overlap-negate-not-use-feature-gate.rs:5:1
   |
LL | impl<T: DerefMut> Foo for T {}
   | --------------------------- first implementation here
LL | impl<U> Foo for &U {}
   | ^^^^^^^^^^^^^^^^^^ conflicting implementation for `&_`
   |
   = note: downstream crates may implement trait `std::ops::DerefMut` for type `&_`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
